Fix asset links and file paths in index.html
Updated links to assets and corrected file paths.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                         <div class="col-6">
 
                             <a href="index.html" class="logo">
-                                <img src="./assets/images/logo.svg" alt="logo" title="logo">
+                                <img src="./logo.svg" alt="logo" title="logo">
                             </a>
 
                         </div>
@@ -145,9 +145,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./assets/js/data.js"></script>
-    <script src="./assets/js/app.js"></script>
+   
+    <script src="./app.js"></script>
 
 </body>
+
 
 </html>
